# projeto-2-mc714

./: .gitignore  README.md
lamport/: CMakeLists.txt  README.md
lamport/src/: lamport.hpp  main.cpp
lamport_clock/: Dockerfile  README.md  docker-compose.yml  gera_docker.py  lamport_clock.py
leader_election/: Dockerfile  README.md  docker-compose.yml  gera_docker.py  leader_selection.py  logs.txt
token_ring/: Dockerfile  README.md  docker-compose.yml  token_ring.py
